force-app/main/default/objects/Account/fields/Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Number__c</fullName>
    <description>UK Companies House registration number (e.g. 12345678 or SC123456). Populated when the account was imported from Companies House.</description>
    <externalId>true</externalId>
    <label>Company Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>