force-app/main/default/objects/Account/fields/Geo_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Geo_Latitude__c</fullName>
    <description>Cached latitude from geocoding</description>
    <label>Geo Latitude</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>