force-app/main/default/objects/Account/fields/Geo_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Geo_Longitude__c</fullName>
    <label>Geo Longitude</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>