force-app/main/default/objects/Account/fields/Rightmove_URL__c.field-meta.xml
<CustomField>
    <fullName>Rightmove_URL__c</fullName>
    <label>Rightmove URL</label>
    <type>Url</type>
</CustomField>