force-app/main/default/objects/Account/fields/SIC_Codes__c.field-meta.xml
<CustomField>
    <fullName>SIC_Codes__c</fullName>
    <description>Standard Industrial Classification codes from Companies House, comma-separated (e.g. "41201, 68310"). Identifies the trade category.</description>
    <label>SIC Codes</label>
    <length>80</length>
    <type>Text</type>
</CustomField>