force-app/main/default/objects/Account/fields/Use_Timeline_Valuations__c.field-meta.xml
<CustomField>
    <fullName>Use_Timeline_Valuations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick this on a Housebuilder account to switch that housebuilder's applications from the standard Initial / Target / Bottom valuation model to the timeline-based model (Open Market, 6-8 Week, 4-6 Week, 2-4 Week). Used by Wain Homes.</description>
    <label>Use Timeline Valuations</label>
    <type>Checkbox</type>
</CustomField>