force-app/main/default/objects/Account/fields/Vendor_Discussion_Approved__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Discussion_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ticked, applications from this House Builder are approved to move to Vendor Discussions stage upon completing Final Checks.</description>
    <inlineHelpText>Tick if this House Builder has given exclusive rights to New Home Solutions for Vendor Discussions.</inlineHelpText>
    <label>Vendor Discussion Approved</label>
    <type>Checkbox</type>
</CustomField>